css bugs stuck, edited the css alot, going to see what was previously done

--- a/app/css_for_swipe.css
+++ b/app/css_for_swipe.css
@@ -1,23 +1,23 @@
 /* Empty. Add your own CSS if you like */
 /* Card styling */
- 
 td-cards {
     display: block;
 }
  
 td-card {
     position: absolute;
-    left: 50%;
+    /*left: 50%;*/
     margin: 80px 0 40px -150px;
-    width: 300px;
-    height: 300px;
+    margin: 0 auto;
+    width: 70%;
+    height: 70%;
     border: 1px solid #999;
     box-shadow: 0px 1px 3px rgba(0,0,0,0.2);
     border-radius: 6px;
     background-color: rgb(255,255,255);
 }
  
-.td-card .title {
+/*.td-card .title {
     height: 40px;
     font-size: 15px;
     padding: 15px;
@@ -30,13 +30,13 @@ td-card .image {
 }
  
 td-card img {
-    height: 258px;
+    height: 100%;
     width: 100%;
     border-radius: 6px;
 }
- 
+ */
 /* Overlay styling*/
- 
+ /*
 .overlayBox {
     position: absolute;
     left: 50%;
@@ -81,4 +81,4 @@ td-card img {
     -webkit-transition: 0.2s opacity linear;
     transition: 0.2s opacity linear;
     opacity: 0;
-}
+}*/
